made changes after feedback 241204

--- a/src/ToDoList.css
+++ b/src/ToDoList.css
@@ -3,6 +3,18 @@
     font-family: 'Courier New', Courier, monospace;
     font-weight: 700;
 }
+
+.visually-hidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+
 h2{
     font-size: 2.5em;
     margin: 0 0 10px 0;
